--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.5",
     "classnames": "^2.3.1",
+    "firebase": "^8.6.8",
     "history": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
